Pequeñas mejoras a los formularios de clientes, contactos y proveedores, además de actualizar las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -47,7 +47,7 @@
     "accounting-reports": "Informes comptables",
     "accounting-within-regularization": "Ja hi ha una regularització d'impostos en aquest període. No es poden fer canvis.",
     "accounts": "Comptes",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Data meritació",
     "action": "Acció",
     "actions": "Accions",
     "active": "Actiu",
@@ -657,6 +657,7 @@
     "help-server-accepts-filesize": "Aquest servidor admet una mida màxima de fitxer de %size% MB.",
     "hide": "Amagar",
     "high": "Alt",
+    "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Crear l'assentament comptable per a la regularització d'impostos del període",
     "hint-vat-register": "Veure\/Modificar registre d'Impost",
     "history": "Historial",
@@ -1016,7 +1017,7 @@
     "percentage-surcharge": "% R.E.",
     "percentage-vat": "% Impost",
     "period": "Període",
-    "personalized": "Personalizado",
+    "personalized": "Personalitzat",
     "phase": "Fase",
     "phone": "Telèfon",
     "phone2": "Telèfon 2",
@@ -1064,7 +1065,7 @@
     "price-with-tax": "Preu + impostos",
     "principal": "Principal",
     "print": "Imprimir",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Imprimir compte bancari",
     "print-data-records": "Imprimeix tots els registres",
     "print-export-options": "Opcions d'impressió i exportació",
     "print-list-of-records": "Imprimeix la llista de registres",
@@ -1388,7 +1389,7 @@
     "type-success": "Tipus correcte",
     "type-warning": "Tipus advertència",
     "unbalance": "Desquadrament",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Seient desquadrat",
     "unchecked": "Sense comprovar",
     "under-minimums": "Sota mínims",
     "undo": "Desfer",
