--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -657,6 +657,7 @@
     "help-server-accepts-filesize": "Zerbitzari honek %size% MB. tamaina onartzen du gehienez.",
     "hide": "Eskutatu",
     "high": "Altua",
+    "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Sortu kontabilitate idazpena ekitaldeko zergen erregularizaziorako",
     "hint-vat-register": "Zerga erregistroa ikusi\/aldatu",
     "history": "Historiala",
