--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -657,6 +657,7 @@
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
+    "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Crear o asento contable para a regularización dos impostos do periodo",
     "hint-vat-register": "Ver\/modificar rexistro do imposto",
     "history": "Historial",
