--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -657,6 +657,7 @@
     "help-server-accepts-filesize": "Questo server supporta una dimensione massima di %1$s MB. Se il plugin prende il sopravvento, si sarà in grado di caricare, anche non si può lasciare nulla.",
     "hide": "hide",
     "high": "Alto",
+    "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
     "hint-vat-register": "View\/Modify VAT registration",
     "history": "Historial",
