anadir opcion mantener correlacion fechas

--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -746,6 +746,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "Justificado",
+    "keep-correlation-date": "Mantener correlación de fechas",
     "keys": "Claves",
     "lang-code": "Código de idioma",
     "language": "Idioma",
