--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -657,7 +657,7 @@
     "help-server-accepts-filesize": "Aquest servidor admet una mida màxima de fitxer de %size% MB.",
     "hide": "Amagar",
     "high": "Alt",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Preu més alt",
     "hint-create-accounting-entry": "Crear l'assentament comptable per a la regularització d'impostos del període",
     "hint-vat-register": "Veure\/Modificar registre d'Impost",
     "history": "Historial",
