Renombradas las columnas y nuevos valores de regímenes de IVA.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -509,11 +509,18 @@
     "es-tax-exception-e4": "Espanya: excepció per l'article 23 i 24 de la Llei de l'IVA",
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
+    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Règim especial de l'agricultura, la ramaderia i la pesca",
     "es-tax-regime-exempt": "Exempt",
     "es-tax-regime-general": "Règim general",
+    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Règim simplificat",
     "es-tax-regime-surcharge": "Recàrrec d'equivalència",
+    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
+    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "es_EC": "Espanyol (Ecuador)",
     "estimation": "Pressupost",
     "estimation-email-subject": "El seu pressupost %code%",
@@ -1188,6 +1195,7 @@
     "save-filter": "Desa el filtre",
     "sdk": "SDK",
     "search": "Cercar",
+    "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
     "select": "Seleccionar",
@@ -1376,6 +1384,7 @@
     "transfers-stock": "Transferències d'estoc",
     "translation": "Traducció",
     "translations": "Traduccions",
+    "travel": "Viaje",
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
     "type": "Tipus",
