--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -47,7 +47,7 @@
     "accounting-reports": "Accounting reports",
     "accounting-within-regularization": "There is already a tax regularization in this period. No changes can be made.",
     "accounts": "Accounts",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Accrual date",
     "action": "Action",
     "actions": "Actions",
     "active": "Active",
@@ -509,11 +509,18 @@
     "es-tax-exception-e4": "Spain: exception by article 23 and 24 of the VAT Law",
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
+    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-cash-criteria": "Cash criteria",
     "es-tax-regime-especial-agp": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-exempt": "Exempt",
     "es-tax-regime-general": "General Regime",
+    "es-tax-regime-gold": "Special regime for investment gold",
+    "es-tax-regime-group-entities": "Special regime of the group of entities",
     "es-tax-regime-simplified": "Simplified Regime",
     "es-tax-regime-surcharge": "Equivalence surcharge",
+    "es-tax-regime-telecom": "Special regimes applicable to telecommunications, radio broadcasting or television services and those provided electronically",
+    "es-tax-regime-travel": "Special scheme for travel agents",
+    "es-tax-regime-used-goods": "Special regime for used goods, art objects, antiques and collectibles",
     "es_EC": "Spanish (Ecuador)",
     "estimation": "Estimation",
     "estimation-email-subject": "Your estimation %code%",
@@ -657,7 +664,7 @@
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
     "hide": "Hide",
     "high": "High",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Highest price",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
     "hint-vat-register": "View\/Modify VAT registration",
     "history": "History",
@@ -1017,7 +1024,7 @@
     "percentage-surcharge": "% Surcharge",
     "percentage-vat": "% VAT",
     "period": "Period",
-    "personalized": "Personalizado",
+    "personalized": "Personalized",
     "phase": "Phase",
     "phone": "Phone",
     "phone2": "Phone 2",
@@ -1065,7 +1072,7 @@
     "price-with-tax": "Price with tax",
     "principal": "Main",
     "print": "Print",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Print bank account",
     "print-data-records": "Print all records",
     "print-export-options": "Print and Export Options",
     "print-list-of-records": "Print list of records",
@@ -1188,6 +1195,7 @@
     "save-filter": "Save filter",
     "sdk": "SDK",
     "search": "Search",
+    "second-hand": "Second hand",
     "second-quarter": "2nd quarter",
     "second-trimester": "Second trimester",
     "select": "Select",
@@ -1376,6 +1384,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Translation",
     "translations": "Translations",
+    "travel": "Viaje",
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
     "type": "Type",
@@ -1389,7 +1398,7 @@
     "type-success": "Type success",
     "type-warning": "Type warning",
     "unbalance": "Unbalance",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Unbalanced entry",
     "unchecked": "Unchecked",
     "under-minimums": "Under minimums",
     "undo": "Undo",
