--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -509,11 +509,18 @@
     "es-tax-exception-e4": "Espainia: BEZaren 23. eta 24. legeen artikuluen salbuespena",
     "es-tax-exception-e5": "Espainia: BEZaren 25. legearen artikuluaren salbuespena",
     "es-tax-exception-e6": "Espainia: beste arrazoi bategatik salbuespena",
+    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
     "es-tax-regime-exempt": "Salbuetsia",
     "es-tax-regime-general": "Erregimen orokorra",
+    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Erregimen sinplifikatua",
     "es-tax-regime-surcharge": "Baliokidetasun errekargua",
+    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
+    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "es_EC": "Gaztelania (Ekuatore)",
     "estimation": "Aurrekontua",
     "estimation-email-subject": "Zure %code% aurrekontua",
@@ -1188,6 +1195,7 @@
     "save-filter": "Gorde iragazkia",
     "sdk": "SDK",
     "search": "Bilatu",
+    "second-hand": "Bigarren eskukoa",
     "second-quarter": "2. hiruhilekoa",
     "second-trimester": "Bigarren hiruhilekoa",
     "select": "Aukeratu",
@@ -1376,6 +1384,7 @@
     "transfers-stock": "Stock transferentziak",
     "translation": "Itzulpena",
     "translations": "Itzulpenak",
+    "travel": "Viaje",
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
     "type": "Mota",
