--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -509,11 +509,18 @@
     "es-tax-exception-e4": "España: excepción polo artigo 23 e 24 da Ley do IVE",
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
+    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Réxime especial da agricultura, gandería e pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Réxime xeral",
+    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Réxime simplificado",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
+    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "es_EC": "Español (Ecuador)",
     "estimation": "Orzamento",
     "estimation-email-subject": "O seu orzamento %code%",
@@ -1188,6 +1195,7 @@
     "save-filter": "Gardar filtro",
     "sdk": "SDK",
     "search": "Busca",
+    "second-hand": "Segunda man",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
     "select": "Seleccionar",
@@ -1376,6 +1384,7 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Tradución",
     "translations": "Traducións",
+    "travel": "Viaje",
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
     "type": "Tipo",
