--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -509,11 +509,18 @@
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
+    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
+    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
+    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "es_EC": "Spagnolo (Equador)",
     "estimation": "bilancio",
     "estimation-email-subject": "estimation-email-subject",
@@ -1188,6 +1195,7 @@
     "save-filter": "Salva Filtro",
     "sdk": "sdk",
     "search": "Ricerca",
+    "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
     "select": "select",
@@ -1376,6 +1384,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Traducción",
     "translations": "Traduzioni",
+    "travel": "Viaje",
     "try-again-later": "try-again-later",
     "tuesday": "tuesday",
     "type": "tipo",
