--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -509,11 +509,18 @@
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
+    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Agricultura, ganadería y pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
+    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-telecom": "Regímenes especiales de telecomunicaciones, radiodifusión o televisión y otros",
+    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "es_EC": "Español (Argentina)",
     "estimation": "Presupuesto",
     "estimation-email-subject": "Su presupuesto %code%",
@@ -1188,6 +1195,7 @@
     "save-filter": "Guardar filtro",
     "sdk": "SDK",
     "search": "Buscar",
+    "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
     "select": "Seleccionar",
@@ -1376,6 +1384,7 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
+    "travel": "Viaje",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
     "type": "Tipo",
