--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -509,11 +509,18 @@
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
+    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
+    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
+    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "es_EC": "Espagnol (Équateur)",
     "estimation": "devis",
     "estimation-email-subject": "Votre devis %code%",
@@ -1188,6 +1195,7 @@
     "save-filter": "Enregistrer le filtre",
     "sdk": "SDK",
     "search": "Chercher",
+    "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimestre",
     "select": "Sélectionner",
@@ -1376,6 +1384,7 @@
     "transfers-stock": "Transferts de stock",
     "translation": "Traduction",
     "translations": "traductions:",
+    "travel": "Viaje",
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
     "type": "Type",
