Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -155,9 +155,11 @@
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
     "birth-date": "Data de naixement",
+    "birthday": "Aniversari",
     "block-date": "Data de bloqueig",
     "blocked": "Bloquejat",
     "blocked-date": "Data de bloqueig",
+    "body": "Body",
     "book": "Reservar",
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
@@ -471,6 +473,7 @@
     "email-sent-to": "Email enviat a %email%",
     "email-signature": "Signatura de l'email",
     "email-to": "Email per",
+    "emails": "Correus electrònics",
     "emails-sent": "E-mails enviats",
     "employee": "Empleat",
     "employees": "Empleats",
@@ -583,6 +586,7 @@
     "flag": "Bandera",
     "folder-not-writable": "No es pot escriure sobre la carpeta d'FacturaScripts.",
     "font": "Font",
+    "footer": "Peu de pàgina",
     "footer-text": "Text peu de pàgina",
     "for-admins": "Per administradors",
     "for-all": "Per a tothom",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "Fitxer XLS",
     "standard": "Estàndard",
     "start-date": "Data d'inici",
+    "start-hour": "Hora d'inici",
     "start-time": "Hora d'inici",
     "starting-cron": "Iniciant el cron per a FacturaScripts...",
     "state": "Estat",
@@ -1435,6 +1440,7 @@
     "value-x": "Valor X",
     "value-y": "Valor Y",
     "values": "Valors",
+    "variables": "Variables",
     "variant": "Variant",
     "variants": "Variants",
     "vat": "IVA",
