--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -155,9 +155,11 @@
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
     "birth-date": "Geburtsdatum",
+    "birthday": "Geburtstag",
     "block-date": "Sperrungsdatum",
     "blocked": "verstopft",
     "blocked-date": "Gesperrt bei",
+    "body": "Body",
     "book": "reservieren",
     "box-closed-ok": "Karton richtig geschlossen",
     "boxes": "Cajas",
@@ -471,6 +473,7 @@
     "email-sent-to": "Mail gesendet %email%",
     "email-signature": "Unterschrift E-Mail",
     "email-to": "Email für",
+    "emails": "Emails",
     "emails-sent": "E-Mails gesendet",
     "employee": "Employee",
     "employees": "Angestellte",
@@ -583,6 +586,7 @@
     "flag": "Flagge",
     "folder-not-writable": "Sie können nicht über FacturaScripts Ordner schreiben.",
     "font": "Schriftart",
+    "footer": "Pié de página",
     "footer-text": "Fusszeilen Text",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "XLS-Datei",
     "standard": "standard",
     "start-date": "Anfangsdatum",
+    "start-hour": "Hora de inicio",
     "start-time": "start-time",
     "starting-cron": "Ab FacturaScripts Cron...",
     "state": "Zustand",
@@ -1435,6 +1440,7 @@
     "value-x": "Wert-x",
     "value-y": "Wert-y",
     "values": "Werte",
+    "variables": "Variables",
     "variant": "Variante",
     "variants": "Variante",
     "vat": "IVA",
