--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -155,9 +155,11 @@
     "billing": "Billing",
     "billing-address": "Billing address",
     "birth-date": "Birth date",
+    "birthday": "Birthday",
     "block-date": "Block date",
     "blocked": "Blocked",
     "blocked-date": "Blocked at",
+    "body": "Body",
     "book": "Reserve",
     "box-closed-ok": "Box closed ok",
     "boxes": "Boxes",
@@ -471,6 +473,7 @@
     "email-sent-to": "Email sent to %email%",
     "email-signature": "Email signature",
     "email-to": "Email To",
+    "emails": "Emails",
     "emails-sent": "Emails sent",
     "employee": "Employee",
     "employees": "Employees",
@@ -509,7 +512,7 @@
     "es-tax-exception-e4": "Spain: exception by article 23 and 24 of the VAT Law",
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-agrarian": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-cash-criteria": "Cash criteria",
     "es-tax-regime-especial-agp": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-exempt": "Exempt",
@@ -583,6 +586,7 @@
     "flag": "Flag",
     "folder-not-writable": "You can not write to the FacturaScripts folder.",
     "font": "Font",
+    "footer": "Footer",
     "footer-text": "Footer text",
     "for-admins": "For administrators",
     "for-all": "For everyone",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "XLS file",
     "standard": "standard",
     "start-date": "Start date",
+    "start-hour": "Start hour",
     "start-time": "Start time",
     "starting-cron": "Starting FacturaScripts cron execution...",
     "state": "State",
@@ -1384,7 +1389,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Translation",
     "translations": "Translations",
-    "travel": "Viaje",
+    "travel": "Travel",
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
     "type": "Type",
@@ -1435,6 +1440,7 @@
     "value-x": "Value X",
     "value-y": "Value Y",
     "values": "Values",
+    "variables": "Variables",
     "variant": "Variant",
     "variants": "Variants",
     "vat": "VAT",
