--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -155,9 +155,11 @@
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
+    "birthday": "Cumpleaños",
     "block-date": "Fecha de bloqueo",
     "blocked": "Bloqueado",
     "blocked-date": "Fecha de bloqueo",
+    "body": "Body",
     "book": "Reservar",
     "box-closed-ok": "Caja cerrada correctamente",
     "boxes": "Cajas",
@@ -471,6 +473,7 @@
     "email-sent-to": "Email enviado a %email%",
     "email-signature": "Firma del email",
     "email-to": "Correo electrónico para",
+    "emails": "Emails",
     "emails-sent": "Emails enviados",
     "employee": "Empleado",
     "employees": "Empleados",
@@ -583,6 +586,7 @@
     "flag": "Bandera",
     "folder-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts.",
     "font": "Fuente",
+    "footer": "Pie de página",
     "footer-text": "Texto pie de página",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "Archivo Excel",
     "standard": "Estándar",
     "start-date": "Fecha de inicio",
+    "start-hour": "Hora de inicio",
     "start-time": "Hora inicio",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
@@ -1435,6 +1440,7 @@
     "value-x": "Valor X",
     "value-y": "Valor Y",
     "values": "Valores",
+    "variables": "Variables",
     "variant": "Variante",
     "variants": "Variantes",
     "vat": "IVA",
