--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -47,7 +47,7 @@
     "accounting-reports": "Kontabilitate txostenak",
     "accounting-within-regularization": "Zergen erregularizazio bat ba dago denboraldi honetarako. Ezin dira aldaketak egin.",
     "accounts": "Kontuak",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Sortzapen-data",
     "action": "Ekintza",
     "actions": "Ekintzak",
     "active": "Aktiboa",
@@ -155,9 +155,11 @@
     "billing": "Fakturazioa",
     "billing-address": "Fakturazio helbidea",
     "birth-date": "Jaiotze data",
+    "birthday": "Urtebetetzea",
     "block-date": "Blokeatze data",
     "blocked": "Blokeatuta",
     "blocked-date": "Blokeo data",
+    "body": "Gorputza",
     "book": "Erreserbatu",
     "box-closed-ok": "Kutxa ondo itxita",
     "boxes": "Kutxak",
@@ -471,6 +473,7 @@
     "email-sent-to": "%email%(e)ri bidalitako emaila",
     "email-signature": "Emailaren sinadura",
     "email-to": "Emaila norentzat",
+    "emails": "Emailak",
     "emails-sent": "Bidalitako e-postak",
     "employee": "Langilea",
     "employees": "Langileak",
@@ -509,18 +512,18 @@
     "es-tax-exception-e4": "Espainia: BEZaren 23. eta 24. legeen artikuluen salbuespena",
     "es-tax-exception-e5": "Espainia: BEZaren 25. legearen artikuluaren salbuespena",
     "es-tax-exception-e6": "Espainia: beste arrazoi bategatik salbuespena",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
+    "es-tax-regime-agrarian": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
+    "es-tax-regime-cash-criteria": "Diru-irizpideak",
     "es-tax-regime-especial-agp": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
     "es-tax-regime-exempt": "Salbuetsia",
     "es-tax-regime-general": "Erregimen orokorra",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
+    "es-tax-regime-gold": "Inbertsiorako urreraren erregimen berezia",
+    "es-tax-regime-group-entities": "Entitate taldearen araubide berezia",
     "es-tax-regime-simplified": "Erregimen sinplifikatua",
     "es-tax-regime-surcharge": "Baliokidetasun errekargua",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-regime-telecom": "Telekomunikazio, irrati-difusio edo telebista-zerbitzuei eta elektronikoki ematen direnei aplikatzekoak diren araubide bereziak",
+    "es-tax-regime-travel": "Bidaia-agentzientzako araubide berezia",
+    "es-tax-regime-used-goods": "Erabilitako ondasunen, arte-objektuen, antzinakoen eta bildumazaleen araubide berezia",
     "es_EC": "Gaztelania (Ekuatore)",
     "estimation": "Aurrekontua",
     "estimation-email-subject": "Zure %code% aurrekontua",
@@ -583,6 +586,7 @@
     "flag": "Ikurra",
     "folder-not-writable": "FacturaScripts karpetan ezin da idatzi.",
     "font": "Letra-mota",
+    "footer": "Orri oina",
     "footer-text": "Orri-oinaren testua",
     "for-admins": "Administratzaileentzat",
     "for-all": "Guztientzat",
@@ -664,7 +668,7 @@
     "help-server-accepts-filesize": "Zerbitzari honek %size% MB. tamaina onartzen du gehienez.",
     "hide": "Eskutatu",
     "high": "Altua",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Preziorik altuena",
     "hint-create-accounting-entry": "Sortu kontabilitate idazpena ekitaldeko zergen erregularizaziorako",
     "hint-vat-register": "Zerga erregistroa ikusi\/aldatu",
     "history": "Historiala",
@@ -1024,7 +1028,7 @@
     "percentage-surcharge": "% BE",
     "percentage-vat": "BEZ %",
     "period": "Denboraldia",
-    "personalized": "Personalizado",
+    "personalized": "Pertsonalizatua",
     "phase": "Fasea",
     "phone": "Telefonoa",
     "phone2": "2. telefonoa",
@@ -1072,7 +1076,7 @@
     "price-with-tax": "Prezioa + zergak",
     "principal": "Nagusia",
     "print": "Inprimatu",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Banku-kontua inprimatu",
     "print-data-records": "Inprimatu erregistro guztiak",
     "print-export-options": "Inprimaketa eta esportazio aukerak",
     "print-list-of-records": "Inprimatu erregistroen zerrenda",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "XLS artxiboa",
     "standard": "Estandarra",
     "start-date": "Hasiera data",
+    "start-hour": "Hasiera ordua",
     "start-time": "Hasiera ordua",
     "starting-cron": "FacturaScripts-en cron lana abiarazten...",
     "state": "Egoera",
@@ -1384,7 +1389,7 @@
     "transfers-stock": "Stock transferentziak",
     "translation": "Itzulpena",
     "translations": "Itzulpenak",
-    "travel": "Viaje",
+    "travel": "Bidaia",
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
     "type": "Mota",
@@ -1398,7 +1403,7 @@
     "type-success": "Mota zuzena",
     "type-warning": "Ohar mota",
     "unbalance": "Deskuadrea",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Idazpen okerra",
     "unchecked": "Egiaztatu gabe",
     "under-minimums": "Minimoaren azpitik",
     "undo": "Desegin",
@@ -1435,6 +1440,7 @@
     "value-x": "X balioa",
     "value-y": "Y balorea",
     "values": "Baloreak",
+    "variables": "Aldagaiak",
     "variant": "Aldaera",
     "variants": "Aldaerak",
     "vat": "BEZ",
