--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -155,9 +155,11 @@
     "billing": "Facturation",
     "billing-address": "Adresse de facturation",
     "birth-date": "Date de naissance",
+    "birthday": "Anniversaire",
     "block-date": "Date de verrouillage",
     "blocked": "Bloqué",
     "blocked-date": "Bloqué à",
+    "body": "Body",
     "book": "Réserve",
     "box-closed-ok": "Boîte fermée correctement",
     "boxes": "Boîtes",
@@ -471,6 +473,7 @@
     "email-sent-to": "E-mail envoyé à %email%",
     "email-signature": "Signature de l'e-mail",
     "email-to": "Email pour",
+    "emails": "Emails",
     "emails-sent": "E-mails envoyés",
     "employee": "Employee",
     "employees": "Employé·e·s",
@@ -583,6 +586,7 @@
     "flag": "Drapeau",
     "folder-not-writable": "Vous ne pouvez pas écrire sur le dossier FacturaScripts.",
     "font": "Police de caractère",
+    "footer": "Pié de página",
     "footer-text": "Texte du pied",
     "for-admins": "Pour les administrateurs",
     "for-all": "Pour tout le monde",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "Fichier XLS",
     "standard": "Standard",
     "start-date": "Date de début",
+    "start-hour": "Hora de inicio",
     "start-time": "Heure de départ",
     "starting-cron": "Exécution des tâches programmées de FacturaScripts ...",
     "state": "Etat",
@@ -1435,6 +1440,7 @@
     "value-x": "Valeur X",
     "value-y": "Valeur Y",
     "values": "Valeurs",
+    "variables": "Variables",
     "variant": "Variante",
     "variants": "Variantes",
     "vat": "TVA",
