--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -155,9 +155,11 @@
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
     "birth-date": "Data de nacemento",
+    "birthday": "Aniversario",
     "block-date": "Data de bloqueo",
     "blocked": "Bloqueado",
     "blocked-date": "Data de bloqueo",
+    "body": "Corpo",
     "book": "Reservar",
     "box-closed-ok": "Caixa pechada correctamente",
     "boxes": "Cajas",
@@ -471,6 +473,7 @@
     "email-sent-to": "Email enviado a %email%",
     "email-signature": "Sinatura do email",
     "email-to": "Correo para",
+    "emails": "Emails",
     "emails-sent": "Emails enviados",
     "employee": "Empregado",
     "employees": "Empregados",
@@ -583,6 +586,7 @@
     "flag": "Bandeira",
     "folder-not-writable": "Non pode escribir sobre cartafol FacturaScripts.",
     "font": "Fonte",
+    "footer": "Pe de páxina",
     "footer-text": "Texto pé de páxina",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "Estándar",
     "start-date": "Data de inicio",
+    "start-hour": "Hora de inicio",
     "start-time": "Hora de comezo",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
@@ -1435,6 +1440,7 @@
     "value-x": "Valor X",
     "value-y": "Valor Y",
     "values": "Valores",
+    "variables": "Variables",
     "variant": "Variante",
     "variants": "Variantes",
     "vat": "IVE",
