--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1,8 +1,8 @@
 {
-    "MegaSearch": "MegaSearch",
+    "MegaSearch": "SuperSearch",
     "Traceability": "Tracciabilità",
     "VAT-register": "Partita IVA",
-    "abbreviated": "abbreviated",
+    "abbreviated": "abbreviazione",
     "about": "Di",
     "accept": "accettare",
     "accept-all": "Aceptar todo",
@@ -155,9 +155,11 @@
     "billing": "Billing",
     "billing-address": "Indirizzo Di Fatturazione",
     "birth-date": "Birth date",
+    "birthday": "birthday",
     "block-date": "Block date",
     "blocked": "bloccato",
     "blocked-date": "Bloccato a",
+    "body": "Body",
     "book": "Reserve",
     "box-closed-ok": "Box closed correctly",
     "boxes": "Cajas",
@@ -471,6 +473,7 @@
     "email-sent-to": "email-sent-to",
     "email-signature": "Firma Email",
     "email-to": "Email A",
+    "emails": "Emails",
     "emails-sent": "emails-sent",
     "employee": "Employee",
     "employees": "employees",
@@ -583,6 +586,7 @@
     "flag": "Bandiera",
     "folder-not-writable": "Non è possibile scrivere sui FacturaScripts cartella.",
     "font": "Font",
+    "footer": "Pié de página",
     "footer-text": "footer-text",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "File XLS",
     "standard": "standard",
     "start-date": "Data d'inizio",
+    "start-hour": "Hora de inicio",
     "start-time": "start-time",
     "starting-cron": "A partire FacturaScripts Cron ...",
     "state": "Stato",
@@ -1435,6 +1440,7 @@
     "value-x": "value-x",
     "value-y": "value-y",
     "values": "values",
+    "variables": "Variables",
     "variant": "Variant",
     "variants": "Varianti",
     "vat": "IVA",
