--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -155,9 +155,11 @@
     "billing": "Billing",
     "billing-address": "Endereço de cobrança",
     "birth-date": "Data de nascimento",
+    "birthday": "Aniversário",
     "block-date": "Block date",
     "blocked": "Bloqueado",
     "blocked-date": "Bloqueado em",
+    "body": "Body",
     "book": "Reserve",
     "box-closed-ok": "Box closed correctly",
     "boxes": "Cajas",
@@ -471,6 +473,7 @@
     "email-sent-to": "email-sent-to",
     "email-signature": "email-signature",
     "email-to": "Email To",
+    "emails": "Emails",
     "emails-sent": "emails-sent",
     "employee": "Employee",
     "employees": "employees",
@@ -583,6 +586,7 @@
     "flag": "Bandeira",
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
     "font": "Fonte",
+    "footer": "Pié de página",
     "footer-text": "Texto do rodapé",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "standard",
     "start-date": "Data de início",
+    "start-hour": "Hora de inicio",
     "start-time": "start-time",
     "starting-cron": "Iniciando cron para FacturaScripts ...",
     "state": "Estado",
@@ -1435,6 +1440,7 @@
     "value-x": "value-x",
     "value-y": "value-y",
     "values": "values",
+    "variables": "Variables",
     "variant": "Variant",
     "variants": "Variants",
     "vat": "CUBA",
