--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -155,9 +155,11 @@
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
     "birth-date": "Data de naiximent",
+    "birthday": "Aniversari",
     "block-date": "Data de bloqueig",
     "blocked": "Bloquejat",
     "blocked-date": "Bloquejat el",
+    "body": "Body",
     "book": "Reservar",
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
@@ -471,6 +473,7 @@
     "email-sent-to": "Email enviat a %email%",
     "email-signature": "Firma del correu",
     "email-to": "Email per a",
+    "emails": "Emails",
     "emails-sent": "Correus enviats",
     "employee": "Employee",
     "employees": "employees",
@@ -583,6 +586,7 @@
     "flag": "Bandera",
     "folder-not-writable": "No pots escriure en la carpeta de FacturaScripts.",
     "font": "Tipo de lletra",
+    "footer": "Pié de página",
     "footer-text": "Footer text",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
@@ -1257,6 +1261,7 @@
     "spreadsheet-xls": "Fitxer XLS",
     "standard": "Estàndard",
     "start-date": "Data d'inici",
+    "start-hour": "Hora de inicio",
     "start-time": "Hora d'inici",
     "starting-cron": "Escomençant l'eixecució del cron de FacturaScripts...",
     "state": "Estat",
@@ -1435,6 +1440,7 @@
     "value-x": "Valor X",
     "value-y": "Valor Y",
     "values": "Valors",
+    "variables": "Variables",
     "variant": "Variant del producte",
     "variants": "Variants del producte",
     "vat": "IVA",
