Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -709,6 +709,7 @@
     "integrity-check": "Verificació d'integritat",
     "integrity-check-help": "Aquesta és una verificació de la integritat del sistema, descrita com",
     "international-identifier": "Identificador internacional",
+    "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tenir entre %min% i %max% nombres o lletres, sense espais, accents, ni altres caràcters.",
     "invalid-column-lenght": "%column% ha de tenir entre %min% i %max% caràcters.",
     "invalid-date": "Data %date% no vàlida.",
