--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -709,6 +709,7 @@
     "integrity-check": "Verificación de integridade",
     "integrity-check-help": "Esta é unha verificación da integridade do sistema, descrita como",
     "international-identifier": "Identificador internacional",
+    "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "O código introducido (%value%) non é válido. (%column%) debe ter entre %min% e %max% números ou letras, sin espazos, acentos, nin outros caracteres.",
     "invalid-column-lenght": "%column% deben ter %min% and %max% caracteres.",
     "invalid-date": "Data %date% non válida.",
