--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -709,6 +709,7 @@
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
     "international-identifier": "International identifier",
+    "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "The alphanumeric code entered (%value%) is not valid. (%column%) must have between %min% and %max% numbers or letters, no spaces, accents or any other chraracter.",
     "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
     "invalid-date": "Invalid date %date%.",
