--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -709,6 +709,7 @@
     "integrity-check": "Verificación de integridad",
     "integrity-check-help": "Esta es una verificación de la integridad del sistema, descrita como",
     "international-identifier": "Identificación internacional",
+    "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "El código introducido (%value%) no es válido. (%column%) debe tener entre %min% y %max% números o letras, sin espacios, acentos, ni otros caracteres.",
     "invalid-column-lenght": "%column% ha de tener entre %min% y %max% caracteres.",
     "invalid-date": "Fecha %date% no válida.",
