--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -709,6 +709,7 @@
     "integrity-check": "Integritate egiaztatzea",
     "integrity-check-help": "Hau sistemaren integritate egiaztatze bat da, honela deskribatua",
     "international-identifier": "Nazioarteko identifikatzailea",
+    "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "(%value%) sartutako kodea baliogabea da. (%column%) %min% eta %max% bitarteko zenbaki edo letra kopurua eduki behar du espazio, azentu edo beste karaktere gabe.",
     "invalid-column-lenght": "%column% %min% eta %max% karaktere artean izan behar ditu.",
     "invalid-date": "%date% data ez da zuzena.",
