--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -709,6 +709,7 @@
     "integrity-check": "Test d'intégrité",
     "integrity-check-help": "Il s'agit d'un test d'intégrité système, comme décrit",
     "international-identifier": "Identifiant international",
+    "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "Le code alphanumérique entré (%value%) est incorrect. (%column%) doit avoir entre %min% et %max% chiffres ou lettres, et ne pas comporter d'espaces, d'accents ou tout autre caractère.",
     "invalid-column-lenght": "%column% doit avoir entre %min% et %max% caractères.",
     "invalid-date": "Date %date% non valide.",
