--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -709,6 +709,7 @@
     "integrity-check": "Controllo integrità",
     "integrity-check-help": "Questa è una verifica dell'integrità del sistema, descritta come",
     "international-identifier": "Identificatore internazionale",
+    "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
     "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
     "invalid-date": "Data% 1 $ s non è valida.",
